Fix a layout issue with the Display format fieldset on the add view wizard.
Previously this was fixed in the wrong place (it's only a Seven bug) and also only for the page display (it occurs for the block display too) and
also only before any AJAX triggers had run on the page (since AJAX changes the ID that the selector was targeting).

Now it should be fixed for real :)

--- a/css/views-admin.seven.css
+++ b/css/views-admin.seven.css
@@ -26,6 +26,16 @@ fieldset fieldset {
   border: medium none;
 }
 
+/**
+ * Being extra safe here and scoping this to the add view wizard form (where
+ * a layout problem occurs for the Display format fieldset if we don't fix its
+ * padding), but it's probably safe to just let it apply everywhere.
+ */
+#views-ui-add-form fieldset fieldset .fieldset-wrapper {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .views-display-tab fieldset {
   padding: 0 12px;
 }
