--- a/css/views-admin.theme.css
+++ b/css/views-admin.theme.css
@@ -302,12 +302,6 @@ th.views-ui-operations {
   font-weight: bold;
 }
 
-/* This could be made more general if more than one instance occurs */
-#edit-page-style .fieldset-wrapper {
-  padding-left: 0;
-  padding-right: 0;
-}
-
 /* @end */
 
 /* @group Rearrange filters
